--- a/public/home_files/css/custom/index.css
+++ b/public/home_files/css/custom/index.css
@@ -27,7 +27,7 @@
     height: 100%;
     z-index: -1;
     opacity: 0.05;
-    background: url(../../images/banner-shape.png);
+    background: url(../../image/banner-shape.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover
@@ -287,7 +287,7 @@
 
 .or-funfact-section {
     margin-bottom: 115px;
-    background-image: url(../../images/fn-bg2.jpg);
+    background-image: url(../../image/fn-bg2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 170px 0px 200px;
