flix messages controller and complte model About dashboard to site

--- a/public/home_files/css/custom/main.css
+++ b/public/home_files/css/custom/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display');
 
 :root {
     --h1size: 50px;
