--- a/public/home_files/css/custom/main.css
+++ b/public/home_files/css/custom/main.css
@@ -3808,6 +3808,14 @@ tbody tr td:last-child {
     font-weight: 700
 }
 
+.header-cart-noty span {
+    font-size: 12px;
+    margin-right: 15px;
+    line-height: 20px;
+    text-transform: uppercase;
+    font-weight: 700
+}
+
 .header-form {
     width: 100%;
     margin: 0px 50px;
@@ -4343,6 +4351,28 @@ tbody tr td:last-child {
     left: 0px
 }
 
+
+.cart-sidebar-noty {
+    position: fixed;
+    top: 0px;
+    left: -450px;
+    width: 400px;
+    height: 100vh;
+    z-index: 5;
+    background: var(--white);
+    box-shadow: 15px 0px 25px 0px rgba(0, 0, 0, 0.15);
+    transition: all linear .3s;
+    -webkit-transition: all linear .3s;
+    -moz-transition: all linear .3s;
+    -ms-transition: all linear .3s;
+    -o-transition: all linear .3s
+}
+
+.cart-sidebar-noty.active {
+    left: 0px
+}
+
+
 .cart-header {
     padding: 18px 25px;
     text-align: center;
@@ -4394,6 +4424,38 @@ tbody tr td:last-child {
 }
 
 .cart-close i:hover {
+    color: var(--white);
+    background: var(--primary)
+}
+
+
+
+.cart-close-noty {
+    position: absolute;
+    top: 50%;
+    right: -18px;
+    transform: translateY(-50%)
+}
+
+.cart-close-noty i {
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    line-height: 35px;
+    border-radius: 50%;
+    text-align: center;
+    display: inline-block;
+    color: var(--text);
+    background: var(--white);
+    text-shadow: var(--primary-tshadow);
+    transition: all linear .3s;
+    -webkit-transition: all linear .3s;
+    -moz-transition: all linear .3s;
+    -ms-transition: all linear .3s;
+    -o-transition: all linear .3s
+}
+
+.cart-close-noty i:hover {
     color: var(--white);
     background: var(--primary)
 }
@@ -4637,7 +4699,35 @@ tbody tr td:last-child {
         transform-origin: top
     }
 
+    .cart-sidebar-noty {
+        left: 0px;
+        width: 100%;
+        height: 100vh;
+        transform: scale(0);
+        margin: 80px 0px 0px;
+        border-radius: 15px 15px 0px 0px;
+        transition: all linear .3s;
+        -webkit-transition: all linear .3s;
+        -moz-transition: all linear .3s;
+        -ms-transition: all linear .3s;
+        -o-transition: all linear .3s
+    }
+
+    .cart-sidebar-noty.active {
+        transform: scale(1);
+        transform-origin: top
+    }
+
     .cart-close {
+        right: 50%;
+        top: -45px;
+        bottom: inherit;
+        transform: translateX(50%);
+        border-radius: 50px 50px 0px 0px;
+        box-shadow: 0px -8px 10px 0px rgba(0, 0, 0, 0.15)
+    }
+
+    .cart-close-noty {
         right: 50%;
         top: -45px;
         bottom: inherit;
