add model Gob and PriceTable home and dashboard

--- a/public/home_files/css/order-item-user.css
+++ b/public/home_files/css/order-item-user.css
@@ -1,106 +1,110 @@
-    body {
-        width: 100%;
-        background-color: #ffffff;
-        margin: 0;
-        padding: 0;
-        -webkit-font-smoothing: antialiased;
-        mso-margin-top-alt: 0px;
-        mso-margin-bottom-alt: 0px;
-        mso-padding-alt: 0px 0px 0px 0px;
-    }
-    p, h1, h2, h3, h4 {
-        margin-top: 0;
-        margin-bottom: 0;
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-    span.preheader {
-        display: none;
-        font-size: 1px;
-    }
-    html {
-        width: 100%;
-    }
-    table {
-        font-size: 14px;
-        border: 0;
-    }
-    /* ----------- responsivity ----------- */
+body {
+    width: 100%;
+    background-color: #ffffff;
+    margin: 0;
+    padding: 0;
+    -webkit-font-smoothing: antialiased;
+    mso-margin-top-alt: 0px;
+    mso-margin-bottom-alt: 0px;
+    mso-padding-alt: 0px 0px 0px 0px;
+}
+p, h1, h2, h3, h4 {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+span.preheader {
+    display: none;
+    font-size: 1px;
+}
+html {
+    width: 100%;
+}
+table {
+    font-size: 14px;
+    border: 0;
+}
+/* ----------- responsivity ----------- */
 
-    @media only screen and (max-width: 640px) {
-        /*------ top header ------ */
-        .main-header {
-            font-size: 20px !important;
-        }
-        .main-section-header {
-            font-size: 28px !important;
-        }
-        .show {
-            display: block !important;
-        }
-        .hide {
-            display: none !important;
-        }
-        .align-center {
-            text-align: center !important;
-        }
-        .no-bg {
-            background: none !important;
-        }
-        /*----- main image -------*/
-        .main-image img {
-            width: 440px !important;
-            height: auto !important;
-        }
-        /* ====== divider ====== */
-        .divider img {
-            width: 440px !important;
-        }
-        /*-------- container --------*/
-        .container590 {
-            width: 440px !important;
-        }
-        .container580 {
-            width: 400px !important;
-        }
-        .main-button {
-            width: 220px !important;
-        }
-        /*-------- secions ----------*/
-        .section-img img {
-            width: 320px !important;
-            height: auto !important;
-        }
-        .team-img img {
-            width: 100% !important;
-            height: auto !important;
-        }
+@media only screen and (max-width: 640px) {
+    /*------ top header ------ */
+    .main-header {
+        font-size: 20px !important;
     }
-    @media only screen and (max-width: 479px) {
-        /*------ top header ------ */
-        .main-header {
-            font-size: 18px !important;
-        }
-        .main-section-header {
-            font-size: 26px !important;
-        }
-        /* ====== divider ====== */
-        .divider img {
-            width: 280px !important;
-        }
-        /*-------- container --------*/
-        .container590 {
-            width: 280px !important;
-        }
-        .container590 {
-            width: 280px !important;
-        }
-        .container580 {
-            width: 260px !important;
-        }
-        /*-------- secions ----------*/
-        .section-img img {
-            width: 280px !important;
-            height: auto !important;
-        }
+    .main-section-header {
+        font-size: 28px !important;
     }
+    .show {
+        display: block !important;
+    }
+    .hide {
+        display: none !important;
+    }
+    .align-center {
+        text-align: center !important;
+    }
+    .no-bg {
+        background: none !important;
+    }
+    /*----- main image -------*/
+    .main-image img {
+        width: 440px !important;
+        height: auto !important;
+    }
+    /* ====== divider ====== */
+    .divider img {
+        width: 440px !important;
+    }
+    /*-------- container --------*/
+    .container590 {
+        width: 440px !important;
+    }
+    .container580 {
+        width: 400px !important;
+    }
+    .main-button {
+        width: 220px !important;
+    }
+    /*-------- secions ----------*/
+    .section-img img {
+        width: 320px !important;
+        height: auto !important;
+    }
+    .team-img img {
+        width: 100% !important;
+        height: auto !important;
+    }
+}
+@media only screen and (max-width: 479px) {
+    /*------ top header ------ */
+    .main-header {
+        font-size: 18px !important;
+    }
+    .main-section-header {
+        font-size: 26px !important;
+    }
+    /* ====== divider ====== */
+    .divider img {
+        width: 280px !important;
+    }
+    /*-------- container --------*/
+    .container590 {
+        width: 280px !important;
+    }
+    .container590 {
+        width: 280px !important;
+    }
+    .container580 {
+        width: 260px !important;
+    }
+    /*-------- secions ----------*/
+    .section-img img {
+        width: 280px !important;
+        height: auto !important;
+    }
+}
+
+.swal-title {
+    padding-bottom: 20px;
+} 
